--- a/index.html
+++ b/index.html
@@ -1,127 +1,154 @@
 <!DOCTYPE html>
-<html lang="en-us">
-  <head>
+<html lang="es">
+<head>
     <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity Web Player | BDifferent</title>
-    <link rel="shortcut icon" href="TemplateData/favicon.ico">
-    <link rel="stylesheet" href="TemplateData/style.css">
-  </head>
-  <body>
-    <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=960 height=600 tabindex="-1"></canvas>
-      <div id="unity-loading-bar">
-        <div id="unity-logo"></div>
-        <div id="unity-progress-bar-empty">
-          <div id="unity-progress-bar-full"></div>
-        </div>
-      </div>
-      <div id="unity-warning"> </div>
-      <div id="unity-footer">
-        <div id="unity-logo-title-footer"></div>
-        <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">BDifferent</div>
-      </div>
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes">
+    <title>BDifferent</title>
+    <style>
+        html, body {
+            margin: 0;
+            padding: 0;
+            background: black;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+            font-family: sans-serif;
+        }
+
+        #unity-container {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        canvas {
+            width: 100%;
+            height: 100%;
+        }
+
+        #orientation-lock {
+            display: none;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100vw;
+            height: 100vh;
+            background: black;
+            color: white;
+            font-size: 1.5em;
+            text-align: center;
+            z-index: 9999;
+            justify-content: center;
+            align-items: center;
+            padding: 2em;
+        }
+
+        #custom-loading-bar {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 60%;
+            max-width: 400px;
+            text-align: center;
+            z-index: 10;
+            color: lightgray;
+        }
+
+        #custom-loading-text {
+            margin-bottom: 10px;
+        }
+
+        #custom-loading-progress {
+            width: 100%;
+            height: 10px;
+            background-color: #444;
+            border-radius: 5px;
+            overflow: hidden;
+        }
+
+        #custom-loading-fill {
+            width: 0%;
+            height: 100%;
+            background-color: lightgray;
+            transition: width 0.2s ease-out;
+        }
+    </style>
+</head>
+
+<body>
+    <div id="unity-container">
+        <canvas id="unity-canvas" tabindex="-1"></canvas>
     </div>
-    <script>
-      var canvas = document.querySelector("#unity-canvas");
 
-      // Shows a temporary message banner/ribbon for a few seconds, or
-      // a permanent error message on top of the canvas if type=='error'.
-      // If type=='warning', a yellow highlight color is used.
-      // Modify or remove this function to customize the visually presented
-      // way that non-critical warnings and error messages are presented to the
-      // user.
-      function unityShowBanner(msg, type) {
-        var warningBanner = document.querySelector("#unity-warning");
-        function updateBannerVisibility() {
-          warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
+    <div id="custom-loading-bar">
+        <div id="custom-loading-text">Loading the BDifferent Experience...</div>
+        <div id="custom-loading-progress">
+            <div id="custom-loading-fill"></div>
+        </div>
+    </div>
+
+    <div id="orientation-lock">
+        ⚠️ Please rotate your device to portrait mode to continue using BDifferent.
+    </div>
+
+    <script>const canvas = document.getElementById("unity-canvas");
+        const lockScreen = document.getElementById("orientation-lock");
+
+        // Detecta si es un dispositivo móvil
+        const isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
+
+        function checkOrientation() {
+            if (!isMobile) {
+                // No aplicar bloqueo en escritorio
+                canvas.style.display = "block";
+                lockScreen.style.display = "none";
+                return;
+            }
+
+            const isLandscape = window.innerWidth > window.innerHeight;
+            if (isLandscape) {
+                canvas.style.display = "none";
+                lockScreen.style.display = "flex";
+            } else {
+                canvas.style.display = "block";
+                lockScreen.style.display = "none";
+            }
         }
-        var div = document.createElement('div');
-        div.innerHTML = msg;
-        warningBanner.appendChild(div);
-        if (type == 'error') div.style = 'background: red; padding: 10px;';
-        else {
-          if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
-          setTimeout(function() {
-            warningBanner.removeChild(div);
-            updateBannerVisibility();
-          }, 5000);
-        }
-        updateBannerVisibility();
-      }
 
-      var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/BD_WebGL.loader.js";
-      var config = {
-        arguments: [],
-        dataUrl: buildUrl + "/BD_WebGL.data",
-        frameworkUrl: buildUrl + "/BD_WebGL.framework.js",
-        codeUrl: buildUrl + "/BD_WebGL.wasm",
-        streamingAssetsUrl: "StreamingAssets",
-        companyName: "BDifferentNYC",
-        productName: "BDifferent",
-        productVersion: "0.1.0",
-        showBanner: unityShowBanner,
-      };
+        window.addEventListener("resize", checkOrientation);
+        window.addEventListener("orientationchange", checkOrientation);
+        checkOrientation();
 
-      // By default, Unity keeps WebGL canvas render target size matched with
-      // the DOM size of the canvas element (scaled by window.devicePixelRatio)
-      // Set this to false if you want to decouple this synchronization from
-      // happening inside the engine, and you would instead like to size up
-      // the canvas DOM size and WebGL render target sizes yourself.
-      // config.matchWebGLToCanvasSize = false;
+        const buildUrl = "Build";
+        const loaderUrl = buildUrl + "/BD_WebGL.loader.js";
+        const config = {
+            dataUrl: buildUrl + "/BD_WebGL.data",
+            frameworkUrl: buildUrl + "/BD_WebGL.framework.js",
+            codeUrl: buildUrl + "/BD_WebGL.wasm",
+            streamingAssetsUrl: "StreamingAssets",
+            companyName: "BDifferentNYC",
+            productName: "BDifferent",
+            productVersion: "0.1.0"
+        };
 
-      // If you would like all file writes inside Unity Application.persistentDataPath
-      // directory to automatically persist so that the contents are remembered when
-      // the user revisits the site the next time, uncomment the following line:
-      // config.autoSyncPersistentDataPath = true;
-      // This autosyncing is currently not the default behavior to avoid regressing
-      // existing user projects that might rely on the earlier manual
-      // JS_FileSystem_Sync() behavior, but in future Unity version, this will be
-      // expected to change.
-
-      if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
-        // Mobile device style: fill the whole browser client area with the game canvas:
-
-        var meta = document.createElement('meta');
-        meta.name = 'viewport';
-        meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
-        document.getElementsByTagName('head')[0].appendChild(meta);
-        document.querySelector("#unity-container").className = "unity-mobile";
-        canvas.className = "unity-mobile";
-
-        // To lower canvas resolution on mobile devices to gain some
-        // performance, uncomment the following line:
-        // config.devicePixelRatio = 1;
-
-
-      } else {
-        // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
-        canvas.style.width = "960px";
-        canvas.style.height = "600px";
-      }
-
-      document.querySelector("#unity-loading-bar").style.display = "block";
-
-      var script = document.createElement("script");
-      script.src = loaderUrl;
-      script.onload = () => {
-        createUnityInstance(canvas, config, (progress) => {
-          document.querySelector("#unity-progress-bar-full").style.width = 100 * progress + "%";
-              }).then((unityInstance) => {
-                document.querySelector("#unity-loading-bar").style.display = "none";
-                document.querySelector("#unity-fullscreen-button").onclick = () => {
-                  unityInstance.SetFullscreen(1);
-                };
-
-              }).catch((message) => {
-                alert(message);
-              });
-            };
-
-      document.body.appendChild(script);
-
-    </script>
-  </body>
+        const script = document.createElement("script");
+        script.src = loaderUrl;
+        script.onload = () => {
+            createUnityInstance(canvas, config, (progress) => {
+                const fill = document.getElementById("custom-loading-fill");
+                fill.style.width = (progress * 100) + "%";
+            }).then((unityInstance) => {
+                document.getElementById("custom-loading-bar").style.display = "none";
+            }).catch((message) => {
+                alert("Error cargando Unity WebGL: " + message);
+            });
+        };
+        document.body.appendChild(script);</script>
+</body>
 </html>
