--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@
         checkOrientation();
 
         const buildUrl = "Build";
-        const loaderUrl = buildUrl + "/BD_WebGL.loader.js";
+        const loaderUrl = buildUrl + "/BD_WebGL2.loader.js";
         const config = {
-            dataUrl: buildUrl + "/BD_WebGL.data",
-            frameworkUrl: buildUrl + "/BD_WebGL.framework.js",
-            codeUrl: buildUrl + "/BD_WebGL.wasm",
+            dataUrl: buildUrl + "/BD_WebGL2.data",
+            frameworkUrl: buildUrl + "/BD_WebGL2.framework.js",
+            codeUrl: buildUrl + "/BD_WebGL2.wasm",
             streamingAssetsUrl: "StreamingAssets",
             companyName: "BDifferentNYC",
             productName: "BDifferent",
